tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@chart_stacked.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/chart_stacked.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-200 -130 400 260" width="400" height="260" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: bold; color: black; }
    .lini .lini-canvas { fill: white; }
    .lini .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-line { stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
  </style>
  <defs/>
  <rect class="lini-canvas" x="-200" y="-130" width="400" height="260"/>
  <g class="lini-scene">
    <g class="lini-node lini-chart lini-block" transform="translate(0,0)">
      <rect x="-179" y="-109" width="358" height="218" rx="0" ry="0"/>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="71" x2="168" y2="71"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="22" x2="168" y2="22"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="-27" x2="168" y2="-27"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="-76" x2="168" y2="-76"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(-110.425,51.4)">
        <title>Q1 · NA: 40</title>
        <rect x="-25.7742" y="-19.6" width="51.5484" height="39.2" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #00bcb1; stroke-width: 0" transform="translate(-110.425,17.1)">
        <title>Q1 · EU: 30</title>
        <rect x="-25.7742" y="-14.7" width="51.5484" height="29.4" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #e78022; stroke-width: 0" transform="translate(-110.425,-7.4)">
        <title>Q1 · APAC: 20</title>
        <rect x="-25.7742" y="-9.8" width="51.5484" height="19.6" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(-30.875,48.95)">
        <title>Q2 · NA: 45</title>
        <rect x="-25.7742" y="-22.05" width="51.5484" height="44.1" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #00bcb1; stroke-width: 0" transform="translate(-30.875,9.75)">
        <title>Q2 · EU: 35</title>
        <rect x="-25.7742" y="-17.15" width="51.5484" height="34.3" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #e78022; stroke-width: 0" transform="translate(-30.875,-19.65)">
        <title>Q2 · APAC: 25</title>
        <rect x="-25.7742" y="-12.25" width="51.5484" height="24.5" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(48.675,46.5)">
        <title>Q3 · NA: 50</title>
        <rect x="-25.7742" y="-24.5" width="51.5484" height="49" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #00bcb1; stroke-width: 0" transform="translate(48.675,5.83)">
        <title>Q3 · EU: 33</title>
        <rect x="-25.7742" y="-16.17" width="51.5484" height="32.34" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #e78022; stroke-width: 0" transform="translate(48.675,-25.04)">
        <title>Q3 · APAC: 30</title>
        <rect x="-25.7742" y="-14.7" width="51.5484" height="29.4" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(128.225,41.6)">
        <title>Q4 · NA: 60</title>
        <rect x="-25.7742" y="-29.4" width="51.5484" height="58.8" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #00bcb1; stroke-width: 0" transform="translate(128.225,-7.4)">
        <title>Q4 · EU: 40</title>
        <rect x="-25.7742" y="-19.6" width="51.5484" height="39.2" rx="0" ry="0"/>
      </g>
      <g class="lini-node lini-block" style="fill: #e78022; stroke-width: 0" transform="translate(128.225,-45.62)">
        <title>Q4 · APAC: 38</title>
        <rect x="-25.7742" y="-18.62" width="51.5484" height="37.24" rx="0" ry="0"/>
      </g>
      <text class="lini-text" x="-159.5" y="71" style="fill: #888; font-size: 11px">0</text>
      <text class="lini-text" x="-162.8" y="22" style="fill: #888; font-size: 11px">50</text>
      <text class="lini-text" x="-166.1" y="-27" style="fill: #888; font-size: 11px">100</text>
      <text class="lini-text" x="-166.1" y="-76" style="fill: #888; font-size: 11px">150</text>
      <text class="lini-text" x="-110.425" y="82.7" style="fill: #888; font-size: 11px">Q1</text>
      <text class="lini-text" x="-30.875" y="82.7" style="fill: #888; font-size: 11px">Q2</text>
      <text class="lini-text" x="48.675" y="82.7" style="fill: #888; font-size: 11px">Q3</text>
      <text class="lini-text" x="128.225" y="82.7" style="fill: #888; font-size: 11px">Q4</text>
      <text class="lini-text" x="0" y="-92.9" style="font-weight: bold; font-size: 13px">Revenue by region ($k)</text>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(-60.9,100.1)">
        <rect x="-5.5" y="-5.5" width="11" height="11" rx="0" ry="0"/>
      </g>
      <text class="lini-text" x="-43.8" y="100.1" style="font-size: 11px">NA</text>
      <g class="lini-node lini-block" style="fill: #00bcb1; stroke-width: 0" transform="translate(-15.7,100.1)">
        <rect x="-5.5" y="-5.5" width="11" height="11" rx="0" ry="0"/>
      </g>
      <text class="lini-text" x="1.4" y="100.1" style="font-size: 11px">EU</text>
      <g class="lini-node lini-block" style="fill: #e78022; stroke-width: 0" transform="translate(29.5,100.1)">
        <rect x="-5.5" y="-5.5" width="11" height="11" rx="0" ry="0"/>
      </g>
      <text class="lini-text" x="53.2" y="100.1" style="font-size: 11px">APAC</text>
    </g>
  </g>
  <g class="lini-links"/>
</svg>
