tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@chart_threshold.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/chart_threshold.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-200 -130 400 260" width="400" height="260" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: bold; color: black; }
    .lini .lini-canvas { fill: white; }
    .lini .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-line { stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
  </style>
  <defs/>
  <rect class="lini-canvas" x="-200" y="-130" width="400" height="260"/>
  <g class="lini-scene">
    <g class="lini-node lini-chart lini-block" transform="translate(0,0)">
      <rect x="-179" y="-109" width="358" height="218" rx="0" ry="0"/>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="88.6" x2="168" y2="88.6"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="33.6" x2="168" y2="33.6"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="-21.4" x2="168" y2="-21.4"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: rgba(0, 0, 0, 0.1); stroke-width: 1" transform="translate(0,0)">
        <line x1="-150.2" y1="-76.4" x2="168" y2="-76.4"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(-110.425,85.3)">
        <title>p50 · v2: 12</title>
        <rect x="-25.7742" y="-3.3" width="51.5484" height="6.6" rx="2" ry="2"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(-30.875,77.6)">
        <title>p90 · v2: 40</title>
        <rect x="-25.7742" y="-11" width="51.5484" height="22" rx="2" ry="2"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(48.675,66.6)">
        <title>p99 · v2: 80</title>
        <rect x="-25.7742" y="-22" width="51.5484" height="44" rx="2" ry="2"/>
      </g>
      <g class="lini-node lini-block" style="fill: #ec6e97; stroke-width: 0" transform="translate(128.225,6.1)">
        <title>p999 · v2: 300</title>
        <rect x="-25.7742" y="-82.5" width="51.5484" height="165" rx="2" ry="2"/>
      </g>
      <g class="lini-node lini-line" style="fill: none; stroke: #f27168; stroke-width: 1.5; stroke-dasharray: 5,3.75" transform="translate(0,0)">
        <line x1="-150.2" y1="-48.9" x2="168" y2="-48.9"/>
      </g>
      <text class="lini-text" x="-124.1" y="-55.5" style="fill: #f27168; font-size: 11px">SLO 250</text>
      <text class="lini-text" x="-159.5" y="88.6" style="fill: #888; font-size: 11px">0</text>
      <text class="lini-text" x="-166.1" y="33.6" style="fill: #888; font-size: 11px">100</text>
      <text class="lini-text" x="-166.1" y="-21.4" style="fill: #888; font-size: 11px">200</text>
      <text class="lini-text" x="-166.1" y="-76.4" style="fill: #888; font-size: 11px">300</text>
      <text class="lini-text" x="-110.425" y="100.3" style="fill: #888; font-size: 11px">p50</text>
      <text class="lini-text" x="-30.875" y="100.3" style="fill: #888; font-size: 11px">p90</text>
      <text class="lini-text" x="48.675" y="100.3" style="fill: #888; font-size: 11px">p99</text>
      <text class="lini-text" x="128.225" y="100.3" style="fill: #888; font-size: 11px">p999</text>
      <text class="lini-text" x="0" y="-92.9" style="font-weight: bold; font-size: 13px">API latency (ms)</text>
    </g>
  </g>
  <g class="lini-links"/>
</svg>
