tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@desugar.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/desugar.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-117.855 -88.5 235.71 157.5" width="235.71" height="157.5" class="lini lini-scope-c299418e">
  <style>
    .lini-scope-c299418e, .lini-scope-c299418e text { font-family: "Google Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
    .lini-scope-c299418e { font-size: 15px; font-weight: 500; color: black; }
    .lini-scope-c299418e .lini-canvas { fill: white; }
    .lini-scope-c299418e .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini-scope-c299418e .lini-cyl { fill: white; stroke: #444; stroke-width: 2; stroke-dasharray: none; }
    .lini-scope-c299418e .lini-text { fill: currentColor; stroke: none; text-anchor: middle; }
    .lini-scope-c299418e .lini-box { fill: white; stroke: #444; stroke-width: 2; }
    .lini-scope-c299418e .lini-group { fill: rgba(0, 0, 0, 0.03); stroke: rgba(0, 0, 0, 0.4); stroke-width: 1; stroke-dasharray: 5,4; }
    .lini-scope-c299418e .lini-caption { color: rgba(0, 0, 0, 0.5); font-size: 12px; font-weight: 400; }
    .lini-scope-c299418e .lini-badge { fill: #0a84ff; color: white; font-size: 11px; font-weight: normal; }
    .lini-scope-c299418e .lini-chip { fill: #cff6ff; stroke: #00547e; color: #00547e; }
  </style>
  <defs>
    <filter id="lini-shadow-803f42a2" x="-50%" y="-50%" width="200%" height="200%"><feDropShadow dx="2" dy="3" stdDeviation="3" flood-color="rgba(0, 0, 0, 0.2)"/></filter>
    <path id="lini-g1400-0" d="…"/>
    <path id="lini-g1400-1" d="…"/>
    <path id="lini-g1400-65" d="…"/>
    <path id="lini-g1400-119" d="…"/>
    <path id="lini-g1400-334" d="…"/>
    <path id="lini-g1400-1654" d="…"/>
    <path id="lini-g1500-0" d="…"/>
    <path id="lini-g1500-79" d="…"/>
    <path id="lini-g1500-94" d="…"/>
    <path id="lini-g1500-202" d="…"/>
    <path id="lini-g1500-209" d="…"/>
  </defs>
  <rect class="lini-canvas" x="-117.855" y="-88.5" width="235.71" height="157.5"/>
  <g class="lini-scene">
    <g class="lini-node lini-group lini-block" data-id="api" transform="translate(-45.21,0)">
      <rect x="-52.145" y="-48.5" width="104.29" height="97" rx="8" ry="8"/>
      <g class="lini-node lini-chip lini-box lini-block" data-id="health" transform="translate(0,0)">
        <rect x="-31.145" y="-27.5" width="62.29" height="55" rx="12" ry="12"/>
        <g class="lini-text">
          <use href="#lini-g1500-94" transform="translate(-11.145 5.37) scale(0.015 -0.015)"/>
          <use href="#lini-g1500-79" transform="translate(1.305 5.37) scale(0.015 -0.015)"/>
        </g>
      </g>
      <g class="lini-node lini-caption lini-block" transform="translate(-43.223,-62.5)">
        <rect x="-8.922" y="-6" width="17.844" height="12" rx="0" ry="0"/>
        <g class="lini-text">
          <use href="#lini-g1400-1" transform="translate(-8.922 4.296) scale(0.012 -0.012)"/>
          <use href="#lini-g1400-119" transform="translate(-0.882 4.296) scale(0.012 -0.012)"/>
          <use href="#lini-g1400-65" transform="translate(6.006 4.296) scale(0.012 -0.012)"/>
        </g>
      </g>
      <g class="lini-node lini-badge lini-block" transform="translate(46.469,-47)">
        <g filter="url(#lini-shadow-803f42a2)">
          <rect x="-11.676" y="-7.5" width="23.352" height="15" rx="8" ry="8"/>
        </g>
        <g class="lini-text">
          <use href="#lini-g1400-334" transform="translate(-5.676 3.938) scale(0.011 -0.011)"/>
          <use href="#lini-g1400-1654" transform="translate(-0.088 3.938) scale(0.011 -0.011)"/>
        </g>
      </g>
    </g>
    <g class="lini-node lini-cyl" data-id="db" transform="translate(67.645,0)">
      <path d="M -29.21 -22 L -29.21 22 A 29.21 5.5 0 0 0 29.21 22 L 29.21 -22 A 29.21 5.5 0 0 0 -29.21 -22 Z"/>
      <ellipse cx="0" cy="-22" rx="29.21" ry="5.5"/>
      <g class="lini-text">
        <use href="#lini-g1500-209" transform="translate(-9.21 7.08) scale(0.015 -0.015)"/>
        <use href="#lini-g1500-202" transform="translate(0 7.08) scale(0.015 -0.015)"/>
      </g>
    </g>
  </g>
  <g class="lini-links"/>
</svg>
