tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@drawing.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/drawing.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-76 -76 152 202" width="152" height="202" class="lini">
  <style>
    .lini { font-family: ui-monospace, "SF Mono", "Cascadia Code", "JetBrains Mono", Menlo, Consolas, "Liberation Mono", monospace; font-size: 15px; font-weight: normal; color: black; }
    .lini .lini-canvas { fill: white; }
    .lini .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-oval { fill: white; stroke: #444; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-line { fill: none; stroke: #444; stroke-width: 2; stroke-dasharray: none; }
    .lini .lini-text { fill: currentColor; stroke: none; text-anchor: middle; dominant-baseline: central; }
    .lini .lini-caption { color: rgba(0, 0, 0, 0.5); font-size: 12px; font-weight: normal; }
    .lini .lini-footnote { color: rgba(0, 0, 0, 0.5); font-size: 11px; }
    .lini .lini-hole { fill: white; stroke: #444; }
    .lini .lini-centerline { fill: none; stroke-width: 1; stroke-dasharray: 10,3,1,3; }
  </style>
  <defs/>
  <rect class="lini-canvas" x="-76" y="-76" width="152" height="202"/>
  <g class="lini-scene">
    <g class="lini-node lini-drawing lini-block" data-id="washer" transform="translate(0,0)">
      <rect x="-55" y="-55" width="110" height="110" rx="0" ry="0"/>
      <g class="lini-node lini-oval" data-id="rim" transform="translate(0,0)">
        <ellipse cx="0" cy="0" rx="54" ry="54"/>
      </g>
      <g class="lini-node lini-oval" data-id="land" style="fill: none" transform="translate(0,0)">
        <ellipse cx="0" cy="0" rx="33" ry="33"/>
      </g>
      <g class="lini-node lini-hole lini-oval" data-id="bore" transform="translate(0,0)">
        <ellipse cx="0" cy="0" rx="18" ry="18"/>
        <g class="lini-node lini-centerline lini-line" transform="translate(0,0)">
          <line x1="-22" y1="0" x2="22" y2="0"/>
        </g>
        <g class="lini-node lini-centerline lini-line" transform="translate(0,0)">
          <line x1="0" y1="22" x2="0" y2="-22"/>
        </g>
      </g>
      <g class="lini-node lini-footnote lini-caption lini-block" transform="translate(0,99.5)">
        <rect x="-36.3" y="-5.5" width="72.6" height="11" rx="0" ry="0"/>
        <text class="lini-text" x="0" y="0">WASHER  ⌀36</text>
      </g>
    </g>
  </g>
  <g class="lini-links"/>
</svg>
